# clavezzo-25-claudio_lavezzo_pacote

./: README.md  pyproject.toml
src/claudio_ml_communication/storage/: __init__.py  data.py  model.py
