[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "claudio-ml-communication"
authors = [
    {name = "Claudio Lavezzo", email = "clavezzo@gmail.com"}
]
description = "Esse pacote vai ser utilizado na aula para mostrar como criar um pacote Python"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true